# Benji

./: .claudeignore  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  release.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  deps.py  errors.py  main.py  monitoring.py  plans.py  prompts.py  ratelimit.py  schemas.py  security.py
backend/app/routers/: account.py  auth.py  billing.py  history.py  summary.py  transcribe.py
backend/app/stt/: __init__.py  base.py  deepgram.py  fake.py  grok.py
backend/tests/: conftest.py  test_app.py  test_auth_billing.py  test_grok_stt.py  test_monitoring.py
benji/: CLAUDE.md  __init__.py  account.py  app.py  billing.py  config.py  export.py  history.py  launch_mode.py  logging_config.py  main.py  monitoring.py  report.py  settings.py  stats.py
benji/audio/: CLAUDE.md  capture.py  vad.py
benji/llm/: corrector.py  live_summary.py  providers.py  summarizer.py  summary_worker.py
benji/stt/: CLAUDE.md  backend.py  diarization.py  postprocessing.py  remote.py  transcriber.py
benji/ui/: CLAUDE.md  account_controller.py  display_bus.py  history_window.py  live_summary_window.py  live_tab.py  login_dialog.py  main_window.py  overlay.py  preferences_dialog.py  splash.py  style.py  summaries_tab.py  tray.py  window_controller.py
benji/ui/widgets/: __init__.py  chat_item.py  icons.py  partial_bubble.py  pending_item.py  segmented_control.py  status_pill.py  summary_item.py  waveform.py
docs/: api-contract.md  cloud-architecture.md
docs/superpowers/plans/: 2026-05-27-main-window-polish.md  2026-05-27-main-window.md
docs/superpowers/specs/: 2026-05-27-main-window-design.md  2026-05-27-main-window-polish-design.md
packaging/: README.md  benji.spec  entitlements.plist  make_dmg.sh  sign_and_notarize.sh
tests/: test_account.py  test_app_composition.py  test_billing_client.py  test_capture.py  test_config.py  test_diarization.py  test_display_bus.py  test_export.py  test_launch_mode.py  test_logging_config.py  test_monitoring.py  test_postprocessing.py  test_remote_stt_client.py  test_remote_summary_provider.py  test_report.py  test_settings.py  test_stats.py  test_summaries_tab.py  test_summary_worker.py  test_transcriber_streaming.py  test_vad.py  test_window_controller.py
tests/ui/: test_account_menu.py  test_history_export.py  test_legacy_windows_smoke.py  test_live_tab.py  test_main_window_smoke.py  test_preferences_dialog.py  test_speaker_color.py  test_tray_menu.py
