[project]
name = "benji"
dynamic = ["version"]  # source of truth: benji/__init__.py:__version__
description = "macOS real-time transcription overlay (mic → VAD → STT → subtitles)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Guillaume Demergès" }]

dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy~=2.3.5",
    "PyQt6~=6.10.2",
    "onnxruntime~=1.23.2",
    "psutil~=7.2.2",
    "httpx~=0.28.1",
    "keyring>=25.0",
    "pyobjc-framework-Cocoa>=10.0 ; sys_platform == 'darwin'",
    "pywin32>=306 ; sys_platform == 'win32'",
    "mlx-lm~=0.26.3 ; sys_platform == 'darwin'",
    "mlx-whisper>=0.4.0 ; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.14",
]

[project.optional-dependencies]
diarization = [
    # Real speaker diarization via pyannote embeddings + cosine clustering.
    # Requires HF_TOKEN env var on first run to download the model.
    # >=4.0: diarization.py uses the 4.x Model.from_pretrained API (token=, revision=).
    "pyannote.audio>=4.0",
    "torch>=2.2.0",
]
cloud = [
    # Résumé via l'API Claude (LLMConfig.summary_provider = "cloud").
    # Clé via la variable d'environnement ANTHROPIC_API_KEY.
    "anthropic>=0.40.0",
    # Transcription via le backend Benji (STTConfig.stt_provider = "remote").
    "websockets>=12",
]
monitoring = [
    # Remontée des crashs (benji/monitoring.py). Inactif sans BENJI_SENTRY_DSN.
    "sentry-sdk>=2.0",
]

[project.scripts]
benji = "benji.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "benji/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["benji"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
# No mypy / type stubs (project rule) — ruff is the only static gate.
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Conservative, high-signal set: pyflakes (F), import sorting (I),
# pycodestyle warnings (W), and pyupgrade (UP). Line length (E501) is left
# off on purpose — several lines are intentionally long. Ratchet up later.
select = ["F", "I", "W", "UP"]
