[project]
name = "benji-backend"
version = "0.1.0"
description = "Benji cloud backend — proxy STT/résumé + auth + facturation (cf. docs/api-contract.md)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40.0",
    "pydantic>=2",
    "websockets>=12",  # client streaming Deepgram (app/stt/deepgram.py)
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",  # requis par le TestClient FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
